[package]
name = "echo_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5"
mio = { version = "0.7", features = ["os-poll", "net"]}

[[example]]
name = "echo_server_mt"

[[example]]
name = "echo_server_mio"